kubernetes/apps/kyverno/policies/add-pod-security-defaults.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-pod-security-defaults
  annotations:
    policies.kyverno.io/title: Add Pod Security Defaults
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Adds common Pod security defaults at admission time. Pods are mutated to
      run as non-root, disallow privilege escalation, and drop all Linux
      capabilities for app, init, and ephemeral containers.
spec:
  background: false
  rules:
    - name: add-pod-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          spec:
            securityContext:
              runAsNonRoot: true
    - name: add-container-security-defaults
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): '*'
                securityContext:
                  allowPrivilegeEscalation: false
                  capabilities:
                    drop:
                      - ALL
            =(initContainers):
              - (name): '*'
                securityContext:
                  allowPrivilegeEscalation: false
                  capabilities:
                    drop:
                      - ALL
            =(ephemeralContainers):
              - (name): '*'
                securityContext:
                  allowPrivilegeEscalation: false
                  capabilities:
                    drop:
                      - ALL
